--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -3,32 +3,54 @@
 @tailwind utilities;
 
 :root {
-  --primary-50: 255 242 241;
-  --primary-100: 255 226 224;
-  --primary-200: 255 203 199;
-  --primary-300: 255 166 160;
-  --primary-400: 255 116 106;
-  --primary-500: 248 71 59;
-  --primary-600: 225 38 25;
-  --primary-700: 193 31 20;
-  --primary-800: 160 29 20;
-  --primary-900: 132 31 24;
-  --primary-950: 72 11 7;
+  --primary-50: 246 247 247;
+  --primary-100: 224 231 228;
+  --primary-200: 192 207 201;
+  --primary-300: 153 175 166;
+  --primary-400: 128 151 143;
+  --primary-500: 90 114 107;
+  --primary-600: 70 91 84;
+  --primary-700: 59 74 70;
+  --primary-800: 50 61 59;
+  --primary-900: 44 53 50;
+  --primary-950: 22 29 27;
+
+  --surface-50: 250 247 246;
+  --surface-100: 246 241 239;
+  --surface-200: 236 225 220;
+  --surface-300: 222 203 195;
+  --surface-400: 201 172 160;
+  --surface-500: 179 143 128;
+  --surface-600: 156 117 102;
+  --surface-700: 130 96 83;
+  --surface-800: 109 82 71;
+  --surface-900: 93 72 63;
+  --surface-950: 48 36 31;
+
+  --neutral-50: 247 247 248;
+  --neutral-100: 238 238 240;
+  --neutral-200: 217 217 222;
+  --neutral-300: 183 183 194;
+  --neutral-400: 144 145 160;
+  --neutral-500: 114 116 133;
+  --neutral-600: 92 93 109;
+  --neutral-700: 75 76 89;
+  --neutral-800: 65 66 75;
+  --neutral-900: 57 57 65;
+  --neutral-950: 21 21 24;
 }
 
 .dark {
-  --primary-50: 250 246 254;
-  --primary-100: 242 235 252;
-  --primary-200: 232 218 250;
-  --primary-300: 214 189 245;
-  --primary-400: 189 147 237;
-  --primary-500: 164 105 227;
-  --primary-600: 141 73 212;
-  --primary-700: 120 55 185;
-  --primary-800: 101 49 152;
-  --primary-900: 83 41 122;
-  --primary-950: 56 18 89;
 }
 
 @layer base {
+  * {
+    @apply text-neutral-950;
+  }
+  input,
+  select,
+  textarea,
+  button {
+    @apply bg-transparent placeholder-zinc-500 focus:outline-none focus:ring-2 focus:ring-zinc-950;
+  }
 }
