--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -11,7 +11,7 @@
   select,
   textarea,
   button {
-    @apply bg-transparent placeholder-neutral-500 focus:outline-none focus:ring-2 focus:ring-neutral-950;
+    @apply bg-transparent placeholder-neutral-500 focus:outline-none focus:outline-offset-0 focus:ring-0;
   }
 
   /* search input icon reset */
